objects/Patients__c.object
<CustomObject>
    <label>Patients</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Patients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patients_Name__c</fullName>
        <label>Patients Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Patient__c</fullName>
        <formula>TEXT(FLOOR((DATEVALUE(NOW()) -  DOB__c)/365)) &amp;&apos; Years&apos; &amp; &apos; &apos; &amp; 
TEXT(FLOOR(MOD((DATEVALUE(NOW()) -  DOB__c),365)/30)) &amp;&apos; Months&apos; &amp; &apos; &apos; &amp; 
TEXT(MOD(MOD((DATEVALUE(NOW()) -  DOB__c),365),30)) &amp;&apos; Days&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Patient</label>
        <type>Text</type>
    </fields>
</CustomObject>